infra/kubernetes/frontend/01-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: momo
  name: momo-frontend-service
  labels:
    app: momo-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: momo-frontend
