infra/kubernetes/frontend/05-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: momo
  name: momo-frontend
spec:
  ingressClassName: "nginx"
  rules:
  - host: "momo-store.wownage.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: momo-frontend-service
            port:
              number: 80
